--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="major_column" id="left_column">
         <p id="name_pre">Hi! My name is</p>
-        <p id="name">Shangsong Xue</p>
+        <p id="name">NOFER</p>
         <p id="self_intro">I am a <strong>Computer Science</strong> student at <strong>Boston University</strong></p>
         <div id="resume_link">
             <a href="res/pdf/Resume - Shangsong Xue - v2.pdf">View Full Résumé</a>
