Added CN version

--- a/index_cn.html
+++ b/index_cn.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="major_column" id="left_column">
-        <p id="name_pre">Hi! My name is</p>
-        <p id="name">NOFER</p>
-        <p id="self_intro">I am a <strong>Computer Science</strong> student at <strong>Boston University</strong></p>
+        <p id="name">薛尚松</p>
+        <p id="name_pre">Nofer</p>
+        <p id="self_intro"><strong>波士顿大学计算机专业本科在读</strong></p>
         <div id="resume_link">
-            <a href="res/pdf/Resume - Shangsong Xue - EN.pdf">View Full Résumé</a>
+            <a href="res/pdf/Resume - Shangsong Xue - CN.pdf">查看简历</a>
             <i class="fa-solid fa-arrow-right-long"></i>
         </div>
         <div id="contact_wrapper">
@@ -33,15 +33,12 @@
     </div>
     <div class="major_column" id="right_column">
         <div class="portfolio_section" id="about">
-            <p>Welcome to my personal project showcases!</p>
+            <p>欢迎来到我的<strong>个人项目展示页！</strong></p>
             <p>
-                During the past few year, my main focus has been <strong>Computer Graphics</strong> and <strong>Game Development</strong>. I started teaching myself <strong>Unity Engine</strong> high school, completed a few Game Jams with my firends, took a bunch of relevant math and CS classes at university... Now, I am making <strong>my own renderer</strong> (I will make it into a game engine one day)
-            </p>
-            <p>
-                Besides game development, I love graphic design, archery, and Dungeons & Dragons
+                在过去的几年，我主修 <strong>计算机图形学</strong>和<strong>游戏开发</strong>。从高中开始自学 <strong>Unity</strong> 起，我作为团队内唯一的开发人员参加并完赛了多次Game Jam，在大学里选修了许多相关课程，现在我正在努力编写一款<strong>自制渲染器</strong>
             </p>
         </div>
-        <p id="proj_block_title">My Projects</p>
+        <p id="proj_block_title">个人项目</p>
         <div class="portfolio_section" id="projects">
             <div class="project">
                 <div>
@@ -49,11 +46,10 @@
                 </div>
                 <div>
                     <p class="proj_title">
-                        Customized Renderer
+                        自制渲染器
                     </p>
                     <p class="proj_desc">
-                        A work-in-progress renderer with a customized 3D transformation library. It supports model file (.obj) parsing, shader programming, lighting rendering, input handling, and customizable user interface for scene adjustment.
-                        This renderer has a few prototypes, including two software renderer written in Python and C++, respectively, and a simplified OpenGL renderer written in C++
+                        一款开发中的渲染器。其包含一个完整的自制3D变换/线性代数库，支持模型文件(.obj)导入，可编程着色器，光照渲染，键鼠响应，以及一个可编程的物体属性面板。此着色器有多个早期实验版本，包括使用Python编写的软光栅渲染器，一个使用C++编写的软光栅渲染器，和一个使用C++编写的较为简单的OpenGL版本
                     </p>
                     <div class="skills">
                         <div class="skill">C++</div>
@@ -68,10 +64,10 @@
                 </div>
                 <div>
                     <p class="proj_title">
-                        Unity Mini-Projects
+                        Unity练习项目
                     </p>
                     <p class="proj_desc">
-                        A variety of personal Unity mini-projects exploring ideas such as scriptable render pipeline, GPU-assisted mass computation, stylized/non-photorealistic rendering, ray marching, etc. 
+                        一系列Unity个人练习项目，用于学习可编程渲染管线，GPU辅助计算，风格和渲染(NPR)，和光线步进等 
                     </p>
                     <div class="skills">
                         <div class="skill">Unity</div>
@@ -86,10 +82,10 @@
                 </div>
                 <div>
                     <p class="proj_title">
-                        Game Jam Projects
+                        Game Jam游戏
                     </p>
                     <p class="proj_desc">
-                        Several games created in collaboration during 48H game jams (Global Gam Jams, GMTK Game Jams, and CiGA Game Jams) as the sole programmer and 3D modeler on the team
+                        在多次48小时game jam (Global Gam Jams, GMTK Game Jams, 和CiGA Game Jams)中作为团队中唯一的开发人员协助团队完成的游戏
                     </p>
                     <div class="skills">
                         <div class="skill">Unity</div>
@@ -105,10 +101,10 @@
                 </div>
                 <div>
                     <p class="proj_title">
-                        Graphic Design
+                        平面设计
                     </p>
                     <p class="proj_desc">
-                        Graphic designs including album covers, logo design, identity packages, etc.
+                        平面设计练习，包括专辑封面，图标设计，Identity Package等
                     </p>
                     <div class="skills">
                         <div class="skill">Adobe PS</div>
@@ -119,7 +115,7 @@
             </div>
         </div>
     </div>
-    <a href="index_cn.html" id="lang"><strong>EN/</strong>中文</a>
+    <a href="index.html" id="lang">EN<strong>/中文</strong></a>
 
     <script>
         
