Minor wording changes (CN)

--- a/index_cn.html
+++ b/index_cn.html
@@ -35,7 +35,7 @@
         <div class="portfolio_section" id="about">
             <p>欢迎来到我的<strong>个人项目展示页！</strong></p>
             <p>
-                在过去的几年，我主修 <strong>计算机图形学</strong>和<strong>游戏开发</strong>。从高中开始自学 <strong>Unity</strong> 起，我作为团队内唯一的开发人员参加并完赛了多次Game Jam，在大学里选修了许多相关课程，现在我正在努力编写一款<strong>自制渲染器</strong>
+                在过去的几年，我主修 <strong>计算机图形学</strong>和<strong>游戏开发</strong>。从高中开始自学 <strong>Unity</strong> 起，我作为团队内唯一的开发人员参加并完赛了多次Game Jam，并在大学里选修了许多相关课程，目前我正在编写一款<strong>自制渲染器</strong>
             </p>
         </div>
         <p id="proj_block_title">个人项目</p>
@@ -49,7 +49,7 @@
                         自制渲染器
                     </p>
                     <p class="proj_desc">
-                        一款开发中的渲染器。其包含一个完整的自制3D变换/线性代数库，支持模型文件(.obj)导入，可编程着色器，光照渲染，键鼠响应，以及一个可编程的物体属性面板。此着色器有多个早期实验版本，包括使用Python编写的软光栅渲染器，一个使用C++编写的软光栅渲染器，和一个使用C++编写的较为简单的OpenGL版本
+                        一款开发中的渲染器。其包含一个完整的自制3D变换/线性代数库，支持模型文件(.obj)导入，可编程着色器，光照渲染，键鼠响应，以及一个可编程的物体属性面板。此渲染器有多个早期实验版本，包括使用Python编写的软光栅渲染器，一个使用C++编写的软光栅渲染器，和一个使用C++编写的较为简单的OpenGL版本
                     </p>
                     <div class="skills">
                         <div class="skill">C++</div>
