Updated Resume & Some minor changes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p id="name_pre">Hi! My name is</p>
         <p id="name">NOFER</p>
         <p id="self_intro">I am a <strong>Computer Science</strong> student at <strong>Boston University</strong></p>
-        <div id="resume_link">
-            <a href="res/pdf/Resume - Shangsong Xue - EN.pdf">View Full Résumé</a>
+        <a id="resume_link" href="res/pdf/Resume - Shangsong Xue - EN.pdf">
+            <span>View Full Résumé </span>
             <i class="fa-solid fa-arrow-right-long"></i>
-        </div>
+        </a>
         <div id="contact_wrapper">
             <div id="contacts">
                 <a href="https://github.com/NoOffer">
