--- a/index_cn.html
+++ b/index_cn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nofer的主页</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/b6810b08c6.js" crossorigin="anonymous"></script>
 </head>
@@ -13,10 +13,10 @@
         <p id="name">薛尚松</p>
         <p id="name_pre">Nofer</p>
         <p id="self_intro"><strong>波士顿大学计算机专业本科在读</strong></p>
-        <div id="resume_link">
-            <a href="res/pdf/Resume - Shangsong Xue - CN.pdf">查看简历</a>
+        <a id="resume_link" href="res/pdf/Resume - Shangsong Xue - CN.pdf">
+            <span>查看简历</span>
             <i class="fa-solid fa-arrow-right-long"></i>
-        </div>
+        </a>
         <div id="contact_wrapper">
             <div id="contacts">
                 <a href="https://github.com/NoOffer">
